feat: update content, minifix

--- a/_includes/layouts/partials/cards-grid.njk
+++ b/_includes/layouts/partials/cards-grid.njk
@@ -5,29 +5,37 @@
   </div>
   {# items #}
   <div class="l-spacing-l">
-    <div {% if categoryFilter == 'blog' or mainLayout === 'grid' %}class="o-cards-grid"{% endif%}>
+    <div {% if mainLayout == 'grid' %}class="o-cards-grid"{% endif%}>
 
       {%- for entry in list | reverse %}
 
         {# categories #}
         {% if entry.data.category == categoryFilter or isPageTag %}
           {# card settings #}
-          {% if categoryFilter == 'blog' or isPageTag %}
+          {% if mainLayout == 'grid' %}
+            {# blog and tags #}
             {% set card = { data: entry.data, modifiers: ['squared-image'], hasImg: true } %}
           {% elif categoryFilter == 'projects' %}
             {% set card = { data: entry.data, modifiers: ['highlight-left'], isExpanded: true } %}
           {% elif categoryFilter == 'til' %}
-            {% set card = { data: entry.data, modifiers: ['highlight-top'], isExpanded: true, number: loop.revindex } %}
+            {# find til number #}
+            {# {% set tilCounter = 0 %}
+            {% for til in list | reverse %}
+              {% if entry.data.category == 'til' and entry.data.title == til.data.title %}
+                {% set tilCounter = loop.index %}
+              {% endif %}
+            {% endfor %} #}
+            {% set card = { data: entry.data, modifiers: ['highlight-top'], isExpanded: true, number: loop.index } %}
           {% elif categoryFilter == 'usefulresources' %}
             {% set card = { data: entry.data, modifiers: ['highlight-left'], isExpanded: true } %}
           {% endif %}
 
           {# card #}
-          {% if categoryFilter !== 'blog' and mainLayout !== 'grid' %}
+          {% if mainLayout !== 'grid' %}
             <div class="l-spacing-m">
           {% endif %}
-          {% include '_includes/layouts/partials/card.njk' %}
-          {% if categoryFilter !== 'blog' and mainLayout !== 'grid' %}
+            {% include '_includes/layouts/partials/card.njk' %}
+          {% if mainLayout !== 'grid' %}
             </div>
           {% endif %}
         {% endif %}
