feat: move content into 'content' folder

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -3,6 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {# twitter share #}
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@giuliachiola" />
+    <meta name="twitter:creator" content="@giuliachiola" />
+    <meta name="twitter:title" content="{{ title }}" />
+    <meta name="twitter:description" content="{{ abstract }}" />
+    <meta name="twitter:image" content="{{ img }}" />
+    <meta property="og:url" content="{{ entry.url | url }}" />
+    <meta property="og:title" content="{{ title }}" />
+    <meta property="og:description" content="{{ abstract }}" />
+    <meta property="og:image" content="{{ img }}" />
+    {# css #}
     <link rel="stylesheet" href="/css/prismjs-theme.css">
     <link rel="stylesheet" href="/css/style.css">
   </head>
