--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -16,6 +16,7 @@
     <meta property="og:image" content="{{ img }}" />
     {# css #}
     <link rel="stylesheet" href="/css/prismjs-theme.css">
+    <link rel="stylesheet" href="/css/gist-syntax-theme.css">
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
