feat: remove useful resources

--- a/_includes/layouts/partials/photogrid.njk
+++ b/_includes/layouts/partials/photogrid.njk
@@ -15,10 +15,10 @@
     url: '/projects'
   },
   {
-    title: 'Useful resources',
+    title: 'Search',
     subtitle: '',
     img: 'https://source.unsplash.com/023T4jyCRqA',
-    url: '/useful-resources'
+    url: '/search'
   }
 ]
 %}
