--- a/search.njk
+++ b/search.njk
@@ -30,7 +30,7 @@ eleventyNavigation:
     {% endfor %}
   </ul>
 
-  <h2 class="j-search__no-results u-hidden">Oh no! There are not awesome posts with this keyword!</h2>
+  <h2 class="j-search__no-results u-hidden">Oh no!<br>There are not awesome posts with this keyword 💔</h2>
 </main>
 
 {% endblock %}
