--- a/search.njk
+++ b/search.njk
@@ -14,8 +14,8 @@ eleventyNavigation:
 
 <main class="l-main l-spacing-l">
   <form class="c-form j-form o-distributed o-distributed--center l-spacing-l l-spacing-top-m">
-    <input class="c-form__input j-search__input" type="search" value="">
-    <button class="c-button j-search__button" type="button">Search</button>
+    <label class="c-form__label" for="search_id">Search...</label>
+    <input class="c-form__input j-search__input" type="search" value="" id="search_id" placeholder="Search...">
   </form>
 
   <ul class="s-search-list">
