feat: add about page

--- a/search.njk
+++ b/search.njk
@@ -1,5 +1,5 @@
 ---
-title: Search page
+title: Search post
 layout: layouts/base.njk
 img: 'https://source.unsplash.com/023T4jyCRqA'
 imgAuthorProfile: 'https://unsplash.com/@mroz'
