--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -36,15 +36,7 @@
         <a href="{{ tagUrl | url }}" class="c-label">{{ tag }}</a>
       {%- endfor %}
 
-      {% set tutorials = [] %}
-      {% for entry in collections.categories %}
-        {# get 'til' and 'blog' posts, excluding this current post #}
-        {% if ((entry.data.category === 'til') or (entry.data.category === 'blog')) and (entry.data.title !== title) %}
-          {% set tutorials = (tutorials.push(entry), tutorials) %}
-        {% endif %}
-      {% endfor %}
-
-      {% set randomTil = tutorials | random %}
+      {% set randomTil = collections.posts | random %}
       <div class="o-distributed o-distributed--center l-spacing-l">
         <a class="c-button" href="{{ randomTil.url | url }}">Take me to another post!</a>
       </div>
