--- a/search.njk
+++ b/search.njk
@@ -19,14 +19,11 @@ eleventyNavigation:
   </form>
 
   <ul class="s-search-list">
-    {% for entry in collections.all %}
-      {% if entry.data.category == 'blog' or entry.data.category == 'til' %}
-        <li class="j-search__item l-spacing-m">
-          {% set card = { data: entry.data, modifiers: ['squared-image', 'horizontal'], hasImg: true } %}
-          {# <a href="{{ entry.url | url }}">{{ entry.data.title }}</a> #}
-          {% include '_includes/layouts/partials/card.njk' %}
-        </li>
-      {% endif %}
+    {% for entry in collections.posts %}
+      <li class="j-search__item l-spacing-m">
+        {% set card = { data: entry.data, modifiers: ['squared-image', 'horizontal'], hasImg: true } %}
+        {% include '_includes/layouts/partials/card.njk' %}
+      </li>
     {% endfor %}
   </ul>
 
