feat: update date render

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ title or renderData.title | striptags }}</title>
     {# twitter share #}
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@giuliachiola" />
