--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -18,7 +18,8 @@
     {# css #}
     <link rel="stylesheet" href="/css/prismjs-theme.css">
     <link rel="stylesheet" href="/css/gist-syntax-theme.css">
-    <link rel="stylesheet" href="/css/style.css">
+    {# css from styleguide repo #}
+    <link rel="stylesheet" href="/super-styleguide/src/css/style.css">
   </head>
   <body>
     <div class="l-wrapper">
