feat: update front pages

--- a/tags.njk
+++ b/tags.njk
@@ -1,8 +1,9 @@
 ---
 layout: layouts/base.njk
-img: 'https://source.unsplash.com/-4uJ_qPU0_E'
-imgAuthorProfile: 'https://unsplash.com/@landscapeplaces'
-imgAuthorName: '@landscapeplaces'
+mainTag: general-3
+# img: 'https://source.unsplash.com/-4uJ_qPU0_E'
+# imgAuthorProfile: 'https://unsplash.com/@landscapeplaces'
+# imgAuthorName: '@landscapeplaces'
 permalink: /tags/{{ tag }}/
 pagination:
   data: collections
