--- a/search.njk
+++ b/search.njk
@@ -1,9 +1,10 @@
 ---
 title: Search post
 layout: layouts/base.njk
-img: 'https://source.unsplash.com/023T4jyCRqA'
-imgAuthorProfile: 'https://unsplash.com/@mroz'
-imgAuthorName: '@mroz'
+# img: 'https://source.unsplash.com/023T4jyCRqA'
+# imgAuthorProfile: 'https://unsplash.com/@mroz'
+# imgAuthorName: '@mroz'
+mainTag: general-3
 
 eleventyNavigation:
   key: search
