--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -5,9 +5,9 @@
     <div class="c-article-section__info">
       {# date #}
       {% set articleDate = date or page.date %}
-      {# {% if date %} #}
+      {% if not isCustomPost %}
         <time class="c-article-section__date" datetime="{{ articleDate }}">{{ articleDate.toDateString() }}</time>
-      {# {% endif %} #}
+      {% endif %}
       {# reading time #}
       {% if readingTime %}
         <p class="c-article-section__reading-time">{{ readingTime }} read</p>
