--- a/search.njk
+++ b/search.njk
@@ -4,7 +4,7 @@ layout: layouts/base.njk
 # img: 'https://source.unsplash.com/023T4jyCRqA'
 # imgAuthorProfile: 'https://unsplash.com/@mroz'
 # imgAuthorName: '@mroz'
-mainTag: general-3
+paletteColor: 4
 
 eleventyNavigation:
   key: search
