--- a/tags.njk
+++ b/tags.njk
@@ -1,9 +1,10 @@
 ---
 layout: layouts/base.njk
-mainTag: general-3
+mainTag: search
 # img: 'https://source.unsplash.com/-4uJ_qPU0_E'
 # imgAuthorProfile: 'https://unsplash.com/@landscapeplaces'
 # imgAuthorName: '@landscapeplaces'
+paletteColor: 4
 permalink: /tags/{{ tag }}/
 pagination:
   data: collections
