--- a/_includes/layouts/partials/hero.njk
+++ b/_includes/layouts/partials/hero.njk
@@ -23,7 +23,7 @@
       {% if quoteAuthor %}
         {% set heroSubtitle = quoteAuthor %}
       {% endif %}
-      <h2 class="c-hero__subtitle">{{ heroSubtitle }}</h2>
+      <h2 class="c-hero__subtitle">{{ heroSubtitle | safe }}</h2>
     </div>
     {% if imgAuthorName %}
       <span class="c-hero__credits">photo by <a href="{{ imgAuthorProfile }}" target="_blank">{{ imgAuthorName }}</a> on <a href="{{ img }}" target="_blank">Unsplash</a></span>
