feat: update submodules

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="/css/gist-syntax-theme.css">
     {# css from styleguide repo #}
     <link rel="stylesheet" href="/super-styleguide/src/css/style.css">
+    {# colors override to test #}
     <link rel="stylesheet" href="/css/color-palette.css">
   </head>
 
