feat: add gitlab icon

--- a/_includes/layouts/partials/footer.njk
+++ b/_includes/layouts/partials/footer.njk
@@ -4,6 +4,9 @@
       <a class="c-footer__item" href="https://twitter.com/giulia_chiola" target="_blank">
         {% include '../../../svg/twitter.svg' %}
       </a>
+      <a class="c-footer__item" href="https://gitlab.com/giuliach" target="_blank">
+        {% include '../../../svg/gitlab.svg' %}
+      </a>
       <a class="c-footer__item" href="https://github.com/giuliachiola" target="_blank">
         {% include '../../../svg/github.svg' %}
       </a>
