--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title or renderData.title | striptags }}</title>
+    <title>{{ title or renderData.title | striptags }} | Giulia Chiola</title>
     {# share #}
     {% set ogImage = '/img/og-images/' + ogImage + '.jpg' %}
     {% if mainTag %}
