feat: update submodule

--- a/_includes/layouts/partials/hero.njk
+++ b/_includes/layouts/partials/hero.njk
@@ -12,7 +12,9 @@
 {% endif %}
 
 <section class="c-hero {{ modifiers }} {% if quote %}c-hero--quote{% endif %}">
+  {% if img %}
   <img class="c-hero__img" src="{{ img }}" alt="">
+  {% endif %}
     <div class="l-main">
       {% set heroTitle = renderData.title or title %}
       {% if quote %}
