feat: add luxon (WIP)

--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -36,6 +36,9 @@
     {{ content | safe }}
   </div>
 
+  {# TODO:  #}
+  {# <footer>Create on {{ page.date }} - Last updated {{ page.lastmod }}</footer> #}
+
   {# bottom #}
   {% if not isCustomPost %}
     <div class="c-article-section__bottom">
