fix: update datetime format in card component

--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -6,7 +6,7 @@
       {# date #}
       {% set articleDate = date or page.date %}
       {% if not isCustomPost %}
-        <time class="c-article-section__date" datetime="{{ articleDate }}">{{ articleDate.toDateString() }}</time>
+        <time class="c-article-section__date" datetime="{{ articleDate | htmlDateString }}">{{ articleDate | htmlDateString('human-readable') }}</time>
       {% endif %}
       {# reading time #}
       {% if readingTime %}
@@ -36,12 +36,13 @@
     {{ content | safe }}
   </div>
 
-  {# TODO:  #}
-  {# <footer>Create on {{ page.date }} - Last updated {{ page.lastmod }}</footer> #}
-
   {# bottom #}
   {% if not isCustomPost %}
     <div class="c-article-section__bottom">
+      {# Footer notes #}
+      {# TODO: #}
+      {# <footer>Last updated {{ updated }}</footer> #}
+
       {# tags #}
       <ul class="c-article-section__tags">
         {%- for tag in tags %}
