--- a/_includes/layouts/partials/card.njk
+++ b/_includes/layouts/partials/card.njk
@@ -50,7 +50,7 @@
     <div class="c-card__bottom">
       {# {% if card.data.date %} #}
       {% set articleDate = card.data.date or page.date %}
-      <time class="c-card__date" datetime="{{ articleDate | htmlDateString }}">{{ articleDate.toDateString() }}</time>
+      <time class="c-card__date" datetime="{{ articleDate | htmlDateString }}">{{ articleDate | htmlDateString('human-readable') }}</time>
       {# {% endif %} #}
       <div class="c-card__tags">
         {% for tag in card.data.tags %}
