--- a/search.njk
+++ b/search.njk
@@ -14,7 +14,7 @@ eleventyNavigation:
 {% block content %}
 
 <main class="l-main l-spacing-l">
-  <form class="c-form j-form o-distributed o-distributed--center l-spacing-l l-spacing-top-m">
+  <form class="c-form o-distributed o-distributed--center l-spacing-l l-spacing-top-m">
     <label class="c-form__label" for="search_id">Search...</label>
     <input class="c-form__input j-search__input" type="search" value="" id="search_id" placeholder="Search...">
   </form>
