--- a/_includes/layouts/partials/photogrid.njk
+++ b/_includes/layouts/partials/photogrid.njk
@@ -1,8 +1,8 @@
 {% set items =  [
   {
-    title: 'Blog',
+    title: 'Tutorials',
     img: 'https://source.unsplash.com/WS5yjFjycNY',
-    url: '/blog'
+    url: '/tutorials'
   },
   {
     title: 'Today I learned',
