feat: add debug script task

--- a/_includes/layouts/partials/article-section.njk
+++ b/_includes/layouts/partials/article-section.njk
@@ -41,7 +41,7 @@
     <div class="c-article-section__bottom">
       {# Footer notes #}
       {# TODO: #}
-      {# <footer>Last updated {{ updated }}</footer> #}
+      <footer>Last updated **{{ dateUpdated }}**</footer>
 
       {# tags #}
       <ul class="c-article-section__tags">
